# len-iot-bridge

./: .gitignore
CPP_OOP/: Abstraction.cpp  Classnobject.cpp  classnobject  encapsulation  encapsulation.cpp  polymorphism  polymorphism.cpp  test.cpp
cpp-simple-project-main/: .env.example  Dockerfile
cpp-simple-project-main/src/: app.cpp
cpp-simple-project-main/src/models/example_abstract_model/: example_abstract_model.h
cpp-simple-project-main/src/models/example_interface_model/: example_interface_model.h
cpp-simple-project-main/src/models/example_model/: example_model.h
docs/: OpenDDS.md  cara_run.md  cara_runn.md  catatan.md  error_dump.md  grpc.md
project-example/CPP_OOP/: Abstractionninheritance.cpp  encapsulation.cpp
project-example/cpp-simple-project-main/: README.md  docker-compose.yaml  rtps.test.ini
project-example/cpp-simple-project-main/docker/: CMakeLists.txt
project-example/cpp-simple-project-main/src/models/example_abstract_model/: example_abstract_model.cpp
project-example/cpp-simple-project-main/src/models/example_model/: example_model.cpp
project-exercise/: README.md
project-exercise/CPP_OOP/: Abstractionninheritance.cpp  Classnobject.cpp  abstraction  encapsulation.cpp  polymorphism.cpp
project-exercise/CPP_OOP/17_2_exer/: akses_modifier.cpp  class_member_fungsi.cpp  hasil  hasil2  hasil3  hasil4  member_kelas_static.cpp  objectnclass.cpp
project-exercise/CPP_OOP/18_3_exer/: This_Pointer.cpp  friend_function.cpp  hasil5  hasil6
project-exercise/CPP_OOP/19_2_exer/: constructor_overloading.cpp  copy_constructor.cpp  konstruktor_dekonstuktor.cpp
project-exercise/CPP_OOP/20_2_exer/: fungsi_overloading.cpp  hasil1  hasil2  hasil3  hasil4  inheritance.cpp  multilevel_inheritance.cpp  multiple_inheritance.cpp
project-exercise/CPP_OOP/23_2_exer/: abstraksi.cpp  enkapsulapsi.cpp  hasil  hasil1  hasil3  polimorfime.cpp
project-exercise/build-WebScoket-project/: .dockerignore  CMakeLists.txt  Dockerfile  conanfile.txt  docker-compose.yaml
project-exercise/build-WebScoket-project/proto/: Sensor.proto
project-exercise/build-WebScoket-project/src/: bridge.cpp  grpc_server.cpp  grpc_server.h  ws_server.cpp  ws_server.h
project-exercise/build-gRPC-Project/: .dockerignore  CMakeLists.txt  Dockerfile  README.md  conanfile.txt  docker-compose.yaml
project-exercise/build-gRPC-Project/proto/: Sensor.proto
project-exercise/build-gRPC-Project/src/: grpc_server.cpp
project-exercise/build-opendds-project/: CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
project-exercise/build-opendds-project/idl/: SensorData.idl
project-exercise/build-opendds-project/src/: SensorListener.cpp  SensorListener.h  publisher.cpp  subscriber.cpp
